# data_lakahouse_10m

./: .gitignore  README.md  pyproject.toml
terraform/: iam.tf  main.tf  networking.tf  output.tf  rds.tf  s3.tf  security_groups.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars example  variables.tf  versions.tf
