[project]
name = "data-lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core>=1.8.7",
    "dbt-postgres>=1.8.2",
    "duckdb>=1.1.1",
    "faker>=30.1.0",
    "matplotlib>=3.9.2",
    "plotly>=5.24.1",
    "polars>=1.9.0",
    "psycopg2>=2.9.9",
    "python-dotenv>=1.0.1",
    "seaborn>=0.13.2",
]
